# vlinderc

./: .gitignore  LICENSE  README.md  build.sbt  millc.cabal  mix.exs
lib/: millc.ex
lib/Millc/: lex.ex
lib/millc/: assembly.ex  ast.ex  ast2ssa.ex  lex.ex  main.ex  name.ex  opt.ex  parse.ex  ssa.ex  ssa2bytecode.ex  type.ex
lib/millc/opt/: cie.ex  tco.ex
project/: assembly.sbt
src/: Main.hs  millc_lex.xrl  millc_parse.yrl
src-exec/: Main.hs
src-lib/Language/Mill/: AST.hs  Lex.hs  Module.hs  Name.hs  Parse.hs
src-lib/Language/Mill/AST/: ID.hs
src-test/Language/Mill/: LexSpec.hs  NameSpec.hs  ParseSpec.hs
src/Language/Mill/: AST.hs
src/main/scala/org/milllang/millc/: ast.scala  module.scala  name.scala  type.scala
src/main/scala/org/milllang/millc/ast/: ast.scala
src/main/scala/org/milllang/millc/name/: symbol.scala
src/main/scala/org/milllang/millc/type/: package.scala  type.scala
src/main/scala/org/vlinderlang/vlinderc/: diagnostic.scala  main.scala  module.scala
src/main/scala/org/vlinderlang/vlinderc/ast/: ast.scala
src/main/scala/org/vlinderlang/vlinderc/ast2ssa/: package.scala
src/main/scala/org/vlinderlang/vlinderc/module2yaml/: package.scala
src/test/scala/org/milllang/millc/: typeSpec.scala
test/: millc_test.exs
test/millc/: assembly_test.exs  ast2ssa_test.exs  lex_test.exs  name_test.exs  parse_test.exs  ssa2bytecode_test.exs  ssa_test.exs  type_test.exs
test/millc/type_test_data/error/: non_unit.mill  return_type.mill
test/millc/type_test_data/ok/: call_bottom.mill  kitchen_sink.mill  return_type.mill  text.mill
(+17 files in other folders)
