name:                   millc
version:                0.1.0.0
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10


executable millc
    hs-source-dirs:     src
    main-is:            Main.hs
    default-language:   Haskell2010
    build-depends:      base, parsec
