name:                   millc
version:                0.1.0.0
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
    hs-source-dirs:     src-lib
    exposed-modules:    Language.Mill.AST, Language.Mill.AST.ID, Language.Mill.Lex, Language.Mill.Parse
    default-language:   Haskell2010
    build-depends:      base, parsec

executable millc
    hs-source-dirs:     src-exec
    main-is:            Main.hs
    default-language:   Haskell2010
    build-depends:      base, millc

test-suite millc-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src-test
    main-is:            Main.hs
    default-language:   Haskell2010
    build-depends:      base, hspec, millc, parsec
